<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_client"
        android:title="@string/add_client"
        android:contentDescription="@string/content_description_add_client"
        android:icon="@drawable/ic_add_client"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_sales"
        android:title="@string/add_sales"
        android:contentDescription="@string/content_description_add_sales"
        android:icon="@drawable/ic_add_sales"
        app:showAsAction="ifRoom"/>

</menu>